--- a/examples/next13-typescript-static-pages/package.json
+++ b/examples/next13-typescript-static-pages/package.json
@@ -14,13 +14,21 @@
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "encoding": "^0.1.13",
     "firebase": "^9.18.0",
     "firebase-admin": "^11.9.0",
+    "lodash": "^4.17.21",
     "next": "13.4.4-canary.0",
     "next-firebase-auth-edge": "0.7.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-loading-hook": "^1.0.0",
-    "typescript": "4.9.3"
+    "typescript": "4.9.3",
+    "victory": "^36.6.11"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
